# GoBot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md
.claude/: settings.local.json
.codex/tasks/: 2026-03-26-mail-management.md
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: campaigns.py  email_outreach.py  health.py  linkedin.py  llm.py  mail.py  scrape_jobs.py  sites.py
backend/app/core/: config.py  crypto.py  database.py  job_manager.py
backend/app/schemas/: campaigns.py  email_outreach.py  lead.py  linkedin.py  llm.py  mail.py  scrape_jobs.py  site.py  source_query.py
backend/app/services/email_generator/: __init__.py  service.py
backend/app/services/intelligence/: __init__.py  scoring.py
backend/app/services/llm/: service.py
backend/app/services/mail/: __init__.py  crypto.py  providers.py  service.py
backend/app/services/scraping/: __init__.py  linkedin_session.py  normalizers.py  service.py
backend/app/services/scraping/providers/: __init__.py  base.py  google_maps.py  linkedin.py
backend/app/services/sites/: __init__.py  service.py
backend/tests/: test_database.py  test_google_maps_provider.py  test_health_api.py  test_intelligence.py  test_linkedin_api.py  test_linkedin_session.py  test_llm_api.py  test_llm_service.py  test_mail_api.py  test_normalizers.py  test_retry_api.py  test_source_query.py
docs/plans/: 2026-03-26-console-ux-roadmap.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+45 files in other folders)
