[project]
name = "gobot-backend"
version = "0.1.0"
description = "FastAPI scraping service for GoBot"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio>=4.12.0,<5.0.0",
    "apify-fingerprint-datapoints>=0.11.0,<1.0.0",
    "browserforge>=1.2.4,<2.0.0",
    "curl-cffi>=0.14.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "msgspec>=0.20.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "playwright>=1.58.0,<2.0.0",
    "scrapling>=0.4.2,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
gobot-api = "app.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
